...
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="2dp"
                    app:srcCompat="@drawable/placeholder" />

                <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
                    android:id="@+id/home_team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/manchester_united"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
...
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_away_badge_team"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="2dp"
                    app:srcCompat="@drawable/placeholder" />

                <com.abdulaziz.submissionfinal.util.CustomTextViewRegular
...
