<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="list_favorite" type="id" />
    <item name="team_badge" type="id" />
    <item name="team_name" type="id" />
    <item name="spinner" type="id" />
    <item name="list_team" type="id" />
    <item name="list_player" type="id" />
</resources>